--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+.movies__list{
+    min-height: 500px;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
 .calendar::before{
     content: '' !important;
     display: inline-block !important;
