--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,29 @@
+::-webkit-scrollbar{
+    padding: 0px 2px;
+    background-color: rgba(65, 65, 65, 0.37);
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: white;
+    width: 10px;
+    height: 50px;
+    border-radius: 5px;
+}
+
 .movies__list{
+    height: 500px !important;
+    overflow: auto !important;
     margin: -20px 0px !important;
 }
 
+.bookmark-list {
+    height: 200px !important;
+    overflow: auto !important;
+}
+
 .card{
-    width: 400px !important;
+    width: 350px !important;
     margin: 20px 0px !important;
     background-color: rgba(65, 65, 65, 0.37);
     transition: all 0.1s;
@@ -13,11 +33,6 @@
     transform: scale(1.009);
     box-shadow: 0 0 5px 5px rgba(184, 183, 183, 0.2);
 }
-
-/* .card-img-top{
-    width: 100% !important;
-    height: auto !important;
-} */
 
 .calendar::before{
     content: '' !important;
@@ -43,3 +58,54 @@
     height: 15px !important;
     margin-right: 15px !important;
 }
+
+.close-modal {
+    position: fixed;
+    top: 1.2rem;
+    right: 2rem;
+    font-size: 5rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+  
+  p {
+    font-size: 1.8rem;
+    }
+
+.hidden {
+    display: none;
+}
+  
+
+.modal-info {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    /* height: 40%; */
+    background-color: white;
+    padding: 6rem;
+    border-radius: 5px;
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+    z-index: 10;
+  }
+  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+  }
+  
