--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,18 @@
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     padding: 0px 2px;
     background-color: rgba(65, 65, 65, 0.37);
     width: 10px;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background-color: white;
     width: 10px;
     height: 50px;
     border-radius: 5px;
 }
 
-.movies__list{
-    height: 500px !important;
+.movies__list {
+    height: 480px !important;
     overflow: auto !important;
     margin: -20px 0px !important;
 }
@@ -22,23 +22,21 @@
     overflow: auto !important;
 }
 
-.card{
+.card {
     width: 350px !important;
     margin: 20px 0px !important;
-    background-color: rgba(65, 65, 65, 0.37);
-    transition: all 0.1s;
+    background-color: rgba(88, 88, 88, 0.37);
+    transition: all 0.5s;
 }
 
-.card:hover{
-    transform: scale(1.009);
-    box-shadow: 0 0 5px 5px rgba(184, 183, 183, 0.2);
+.box-shadov-danger {
+    box-shadow: 0 0 5px 5px rgba(255, 0, 0, 0.418);
 }
 
-.calendar::before{
-    content: '' !important;
+.calendar::before {
+    content: "" !important;
     display: inline-block !important;
     vertical-align: middle !important;
-    /* display: block !important; */
     background-image: url(../img/download.33.png) !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -47,10 +45,9 @@
     margin-right: 15px !important;
 }
 
-.star::before{
-    content: '' !important;
+.star::before {
+    content: "" !important;
     display: inline-block !important;
-    /* vertical-align: middle !important; */
     background-image: url(../img/download.star.png) !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -60,7 +57,7 @@
 }
 
 .close-modal {
-    position: fixed;
+    position: absolute;
     top: 1.2rem;
     right: 2rem;
     font-size: 5rem;
@@ -70,42 +67,34 @@
     background: none;
 }
 
-h1 {
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-  }
-  
-  p {
-    font-size: 1.8rem;
-    }
-
 .hidden {
     display: none;
 }
-  
 
-.modal-info {
-    position: fixed;
+.modals {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
-    /* height: 40%; */
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 6rem;
     border-radius: 5px;
-    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3rem 5rem rgb(85, 85, 85);
     z-index: 10;
-  }
-  
-  .overlay {
+}
+
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
+    height: 100%;
+    background-color: rgba(44, 44, 44, 0.6);
     backdrop-filter: blur(3px);
     z-index: 5;
-  }
-  
+}
+
+.modal-desc {
+    font-size: 24px;
+}
