--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 }
 
 .bookmark-list {
-    height: 200px !important;
+    height: 400px !important;
     overflow: auto !important;
 }
 
@@ -94,9 +94,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(44, 44, 44, 0.6);
+    background-color: rgba(19, 19, 19, 0.6);
     backdrop-filter: blur(3px);
     z-index: 5;
+}
+
+.overlay-style {
+    backdrop-filter: blur(6px);
 }
 
 .modal-desc {
