--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,59 @@
 ::-webkit-scrollbar {
-    padding: 0px 2px;
-    background-color: rgba(65, 65, 65, 0.37);
-    width: 10px;
+    background-color: hsl(231, 100%, 77%);
+    width: 15px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: white;
+    background-color: rgb(107, 107, 107);
     width: 10px;
     height: 50px;
     border-radius: 5px;
 }
 
-.movies__list {
-    height: 480px !important;
-    overflow: auto !important;
-    margin: -20px 0px !important;
+body {
+    margin-top: 86px;
+    background-image: linear-gradient(180deg, #ecfcff 0%, #6673ff 100%);
 }
 
-.bookmark-list {
-    height: 360px !important;
-    overflow: auto !important;
+.navbar-expand-lg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(90deg, #3a47d5 0%, #00d2ff 100%);
+    padding: 0px 110px;
+    z-index: 4;
+}
+
+.list-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    z-index: 5;
+    display: none;
+    background-color: rgba(19, 19, 19, 0.6);
+    backdrop-filter: blur(6px);
+}
+
+.bi-x-lg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: all 0.6s;
+}
+
+.bi-x-lg:hover {
+    color: #fff;
+    background-color: rgba(19, 19, 19, 0.6);
+    backdrop-filter: blur(3px);
 }
 
 .card {
     width: 350px !important;
-    margin: 20px 0px !important;
     transition: all 0.5s;
 }
 
@@ -71,7 +100,7 @@
 }
 
 .modals {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -80,7 +109,7 @@
     padding: 6rem;
     border-radius: 5px;
     box-shadow: 0 3rem 5rem rgb(85, 85, 85);
-    z-index: 10;
+    z-index: 15;
 }
 
 .modal-style {
@@ -95,7 +124,7 @@
     height: 100%;
     background-color: rgba(19, 19, 19, 0.6);
     backdrop-filter: blur(6px);
-    z-index: 5;
+    z-index: 10;
 }
 
 .overlay-style {
